[workspace]
members = ["tenu_builder", "tenu_parser", "tests"]
resolver = "2"

[workspace.package]
authors = ["Yaroslav Lobachev", "Timofey Arkhipov"]
license = "MIT"
edition = "2024"

[package]
name = "tenu"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[profile.dev]
opt-level = 2
debug = true
panic = "abort"

[profile.release]
opt-level = "z"
lto = "thin"
codegen-units = 1
strip = "symbols"
panic = "abort"

[dependencies]
tenu_parser = { path = "tenu_parser" }
tenu_builder = { path = "tenu_builder", optional = true }

[dev-dependencies]
tests = { path = "tests" }

[features]
builder = ["dep:tenu_builder"]
