[package]
name = "tests"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
tenu = { path = "../../tenu" }

[profile.dev]
opt-level = 2
debug = true
panic = "abort"

[profile.release]
opt-level = "z"
lto = "thin"
codegen-units = 1
strip = "symbols"
panic = "abort"